--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "project_monarch",
   "version": "1.0.0",
   "description": "Bootcamp Project 2",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "seed": "node seeds/seed.js"
   },
   "repository": {
     "type": "git",
