starter schema and server.js

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/mikemarino/Project_Monarch.git"
   },
-  "author": "Michael Marino, Vanesa, Steven Elliott",
+  "author": "Michael Marino, Vanesa Gonzalez, Steven Elliott",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mikemarino/Project_Monarch/issues"
